/*
 * $Id: ChangeLog,v 1.5882 2008/01/16 04:28:59 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-01-16 12:00 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
   * contrib/rdd_ads/ace.h
     - MinGW32 does not recognize #pragma warning

   * source/rtl/mlctopos.c
   * source/vm/itemapi.c
     + Add newline to end of file (for MINGW32)

   * source/rtl/pcre/config.h
   * source/rtl/pcre/config.h.generic
   * source/rtl/pcre/pcre.h
   * source/rtl/pcre/pcre.h.generic
   * source/rtl/pcre/pcreposix.c
   * source/rtl/pcre/pcreposix.h
   * source/rtl/pcre/pcre_chartables.c
   * source/rtl/pcre/pcre_chartables.c.dist
   * source/rtl/pcre/pcre_compile.c
   * source/rtl/pcre/pcre_config.c
   * source/rtl/pcre/pcre_dfa_exec.c
   * source/rtl/pcre/pcre_exec.c
   * source/rtl/pcre/pcre_fullinfo.c
   * source/rtl/pcre/pcre_get.c
   * source/rtl/pcre/pcre_globals.c
   * source/rtl/pcre/pcre_info.c
   * source/rtl/pcre/pcre_internal.h
   * source/rtl/pcre/pcre_maketables.c
   * source/rtl/pcre/pcre_newline.c
   * source/rtl/pcre/pcre_ord2utf8.c
   * source/rtl/pcre/pcre_printint.src
   * source/rtl/pcre/pcre_refcount.c
   * source/rtl/pcre/pcre_scanner.h
   * source/rtl/pcre/pcre_study.c
   * source/rtl/pcre/pcre_tables.c
   * source/rtl/pcre/pcre_try_flipped.c
   * source/rtl/pcre/pcre_ucp_searchfuncs.c
   * source/rtl/pcre/pcre_valid_utf8.c
   * source/rtl/pcre/pcre_version.c
   * source/rtl/pcre/pcre_xclass.c
   * source/rtl/pcre/ucp.h
   * source/rtl/pcre/ucpinternal.h
   * source/rtl/pcre/ucptable.h
     ! updated to version 7.5

2008-01-15 23:57 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source\rdd\bmdbfcdx\bmdbfcdx1.c
    * Missing type cast

2008-01-16 03:54 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rdd/wacore.c
  * source/vm/dynsym.c
    ! Some more MT mode fixes.
