@@ -1,5 +1,5 @@
 /*
- * $Id: alt.c,v 1.2 2005/04/25 01:17:15 andijahja Exp $
+ * $Id: alt.c,v 1.3 2006/04/07 09:47:19 lculik Exp $
  */
 
 /*
@@ -63,11 +63,7 @@
  */
 
 #include <hbapi.h>
-
-#if defined(HB_OS_WIN_32)
-   #include <windows.h>
-   #define HB_VK_MENU           0x12
-#endif
+#include <hbapigt.h>
 
 HB_FUNC(FT_ALT)
 {
@@ -77,13 +73,9 @@ HB_FUNC(FT_ALT)
 
       return;
    }
-#elif defined(HB_OS_WIN_32)
+#else
 
-   BYTE kbBuffer[ 256 ];
-
-   GetKeyboardState( kbBuffer );
-
-   hb_retl( kbBuffer[ HB_VK_MENU ] & 0x01 );
+   hb_retl( hb_gt_info( GTI_KBDSHIFTS, FALSE, 0, NULL) & GTI_KBD_ALT );
 
 #endif
 }
